# uwzz

./: LICENSE  README.en.md  README.md  原理.txt
1.9.0主要代码/: Uwc.kt  ca.kt  jftj.kt  pl.kt
Uwzz/: build.gradle
Uwzz-pyqt/: AboutWidget_uw.py  CourseItem_uw.py  HttpToXXT_uw.py  LoginDialog_uw.py  MainWindow.ui  MainWindow1.spec  SignInfoDialog_uw.py  Uwzz.py  about.qml  kaspersky.py
Uwzz-qt/: CMakeLists.txt  CMakeLists.txt.user.1866d50  CMakeLists.txt.user.9f487bc  Courses.qml  academicstatisticswidget.cpp  academicstatisticswidget.h  academicstatisticswidget.ui  activedialog.cpp  activedialog.h  activedialog.ui  activity.cpp  activity.h  course.cpp  course.h  courseactionsdialog.cpp  courseactionsdialog.h  courseactionsdialog.ui  documentparse.cpp  documentparse.h  homework.cpp  homework.h  homeworkpoints.cpp  homeworkpoints.h  httptoxxt.cpp  httptoxxt.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  personmodel.cpp  personmodel.h  points.cpp  points.h  qml.qrc  regexp.cpp  regexp.h
Uwzz-qt/Uwzz/: User.qml  Uwzz.pro  imageprovider.cpp  imageprovider.h  main.cpp  main.qml  qml.qrc
Uwzz/app/: build.gradle
Uwzz/app/src/androidTest/java/com/uuuuu/uwzz/: ExampleInstrumentedTest.java
Uwzz/app/src/main/: AndroidManifest.xml
Uwzz/app/src/main/assets/: xposed_init
Uwzz/app/src/main/assets/com.example.currilculumdesign/shared_prefs/: com.example.currilculumdesign_preferences.xml
Uwzz/app/src/main/java/com/uuuuu/uwzz/: MainActivity.java  MainActivity.kt  Uwc.java  Uwzz.kt  ca.java  jftj.kt  log.java  tj.kt  uwc.java  uwzz.java
Uwzz/app/src/main/res/layout/: activity_ca.xml  activity_jftj.xml  activity_main.xml  activity_main1.xml  activity_tjt.xml  activity_uwc.xml
Uwzz/app/src/main/res/menu/: menu.xml  qdmenu.xml
Uwzz/app/src/main/res/values/: ic_launcher_foreground.xml  strings.xml  themes.xml
Uwzz/app/src/main/res/values-night/: themes.xml
Uwzz/app/src/test/java/com/uuuuu/uwzz/: ExampleUnitTest.java
Uwzz/gradle/wrapper/: gradle-wrapper.properties
Uwzz2/: build.gradle  settings.gradle
Uwzz2/app/: build.gradle  proguard-rules.pro
Uwzz2/app/src/androidTest/java/com/uuuuu/uwzz/: ExampleInstrumentedTest.java  test.kt
Uwzz2/app/src/main/: AndroidManifest.xml
Uwzz2/app/src/main/java/com/uuuuu/uwzz/: Uwc.kt  UwzzPlus.kt  ca.kt  tj.kt
Uwzz2/app/src/main/res/layout/: activity_uwzz_plus.xml
Uwzz2/app/src/main/res/layout-v28/: activity_uwc.xml
Uwzz2/app/src/main/res/menu/: exmenu.xml  menu.xml  smenu.xml
Uwzz2/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
Uwzz2/app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  strings.xml  themes.xml
Uwzz2/app/src/main/res/values-land/: dimens.xml
Uwzz2/app/src/main/res/values-w1240dp/: dimens.xml
Uwzz2/app/src/test/java/com/uuuuu/uwzz/: XxtLogin.kt
Uwzz2/gradle/wrapper/: gradle-wrapper.properties
kuwzz/: CMakeLists.txt  kuwzz.kdev4  org.kde.kuwzz.desktop  org.kde.kuwzz.json  org.kde.kuwzz.metainfo.xml
kuwzz/android/: AndroidManifest.xml  build.gradle  version.gradle.in
kuwzz/src/: CMakeLists.txt  InfoSheet.qml  LoginSheet.qml  XxtWebPage.qml  about.cpp  about.h  app.cpp  app.h  debug.cpp  debug.h  kuwzzconfig.kcfg  kuwzzconfig.kcfgc  main.cpp  resources.qrc
kuwzz/src/contents/ui/: About.qml  main.qml
qt-xxt/: Ui_login.py  autoSign.py  download.py  login.py  login.ui  mainw.py  mainw.pyproject  mainwindow.ui
uwzzz/: com.example.currilculumdesign_preferences.xml  uwzz.apk  使用说明.txt  跳过教务登陆.sh
无需改xml版/: com.example.currilculumdesign_preferences.xml  使用说明.txt  跳过教务登陆.sh
无需改xml版/com.example.currilculumdesign/databases/: zzs.db
